<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hint_top_detail">查看详情</string>
    <string name="i_know">我知道了</string>
    <string name="local_push_alertbody_1">小伙伴们都在赚“大”钱，还不一起来？</string>
    <string name="local_push_alertbody_2">[有人@你]你又有1个朋友用我打折了哦~</string>
    <string name="local_push_alertbody_3">[有人@你]你的生活管家在这里，等你哦！</string>
    <string name="local_push_title_1">开启便捷生活</string>
    <string name="local_push_title_2">有人@你</string>
    <string name="local_push_title_3">有人@你</string>
    <string name="name">支付宝</string>
    <string name="refresh_every_minute">付款码及数字每分钟更新，请当面使用勿泄漏</string>
    <string name="risk_hint_text">数字条码或二维码请当面扫码使用，切勿泄露，以避免资金风险；想收款请使用支付宝收款功能。</string>
    <string name="share_more">更多</string>
    <string name="share_to_alipay">支付宝</string>
    <string name="share_to_contact">发送给朋友</string>
    <string name="share_to_contact_timeline">生活圈</string>
    <string name="share_to_dingding">钉钉</string>
    <string name="share_to_laiwang">来往</string>
    <string name="share_to_laiwang_timeline">来往动态</string>
    <string name="share_to_linkcopy">复制链接</string>
    <string name="open_thirdparty_not_install">该应用未安装</string>
    <string name="auth_network_error">网络连接错误</string>
    <string name="auth_fail">支付宝账号登录异常</string>
    <string name="share_to_mylife">朋友动态</string>
    <string name="share_to_qq">QQ</string>
    <string name="share_to_qzone">QQ空间</string>
    <string name="share_to_sms">短信</string>
    <string name="share_to_weibo">新浪微博</string>
    <string name="share_to_weixin">微信</string>
    <string name="share_to_weixin_timeline">微信朋友圈</string>
    <string name="show_barcode_num">点击查看条形码数字</string>
    <string name="app_name">app_name</string>
    <string name="init">首次启动，正在优化，敬请期待！</string>
    <string name="msp_app_name">支付宝快捷支付服务</string>
    <string name="Cancel">取 消</string>
    <string name="Ensure">确 定</string>
    <string name="app_version">10.1.22.835</string>
    <string name="barcode">条形码</string>
    <string name="barcode_pay">付款码</string>
    <string name="bus_code">乘车码</string>
    <string name="cancel">取消</string>
    <string name="close_hint">确定暂停使用当面付款功能？</string>
    <string name="confirm">确定</string>
    <string name="create_barcode_shortcut">创建桌面快捷付款</string>
    <string name="display_channel_tips">如付款失败，将尝试其他付款方式</string>
    <string name="dont_show_again">下次不再提示</string>
    <string name="face2face_pay_pay">向商家付钱</string>
    <string name="go_request_money">去收款</string>
    <string name="has_been_updated"><Data>"&lt;font color='#566b96'>已更新&lt;/font>"</Data></string>
    <string name="huawei_push_appid">1005373</string>
    <string name="label">支付宝</string>
    <string name="meizu_push_appid">111455</string>
    <string name="meizu_push_appkey">7f85f82d5ee94c859991cef5add30434</string>
    <string name="member_diamond">钻石会员</string>
    <string name="member_golden">黄金会员</string>
    <string name="member_platinum">铂金会员</string>
    <string name="member_primary">大众会员</string>
    <string name="nfc_card_title">支付宝</string>
    <string name="nfc_service_name">支付宝</string>
    <string name="payment_setting">支付设置</string>
    <string name="pref_about">关于</string>
    <string name="pref_item1">账户安全保护</string>
    <string name="pref_item2">隐私权</string>
    <string name="pref_value1">您的淘宝账户已受安全账户机制保护。</string>
    <string name="pref_value2">淘宝账户不会同步您的隐私信息</string>
    <string name="pref_version">账号版本</string>
    <string name="pwd_input_dialog_titile">标题</string>
    <string name="qrcode">二维码</string>
    <string name="refresh_barcode">付款码刷新</string>
    <string name="scan_pay">扫码付</string>
    <string name="share_to_group">生活圈</string>
    <string name="sound_pay">声波付</string>
    <string name="turn_off_onsitepay">暂停使用</string>
    <string name="usage_tips">该数字仅用于付款，请不要发给他人。</string>
    <string name="user_guide">使用说明</string>
    <string name="xiaomi_push_appid">2882303761517401694</string>
    <string name="xiaomi_push_appkey">5471740167694</string>
</resources>
