<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/onsitepay_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:id="@id/titleBarContainer" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/text_hint_layout" android:layout_width="fill_parent" android:layout_height="30.0dip" android:layout_below="@id/titleBarContainer">
        <TextView android:textSize="14.0dip" android:textColor="#80ffffff" android:ellipsize="end" android:gravity="center" android:id="@id/text_hint_top" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLines="1" />
        <TextView android:textSize="14.0dip" android:textColor="@android:color/white" android:ellipsize="end" android:id="@id/text_hint_detail" android:paddingLeft="4.0dip" android:paddingRight="4.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip" android:text="查看详情" android:maxLines="1" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:id="@id/display_channel_tips_container" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="75.0dip" android:layout_alignParentBottom="true">
        <TextView android:textSize="14.0dip" android:textColor="#99ffffff" android:ellipsize="end" android:id="@id/display_channel_tips" android:paddingLeft="20.0dip" android:paddingTop="8.0dip" android:paddingRight="20.0dip" android:paddingBottom="18.0dip" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/display_channel_tips" android:singleLine="true" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/qr_bar_container" android:background="@drawable/barcode_bak_botton" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:layout_above="@id/display_channel_tips_container" android:layout_below="@id/text_hint_layout">
        <LinearLayout android:id="@id/member_container" android:background="@drawable/member_container_bg" android:layout_width="fill_parent" android:layout_height="35.0dip">
            <RelativeLayout android:background="@drawable/member_bg" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/member_img_txt_container" android:paddingLeft="8.0dip" android:paddingRight="8.0dip" android:layout_width="wrap_content" android:layout_height="20.0dip" android:layout_centerInParent="true">
                    <ImageView android:id="@id/member_icon" android:layout_width="15.0dip" android:layout_height="15.0dip" />
                    <TextView android:textSize="14.0dip" android:textColor="#ffffffff" android:id="@id/member_text" android:paddingLeft="2.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/member_primary" />
                </LinearLayout>
                <RelativeLayout android:layout_width="fill_parent" android:layout_height="15.0dip" android:layout_toLeftOf="@id/member_img_txt_container" android:layout_alignParentBottom="true">
                    <ImageView android:id="@id/left_corner" android:background="@drawable/left_pic" android:layout_width="15.0dip" android:layout_height="15.0dip" android:scaleType="fitXY" android:layout_alignParentRight="true" />
                    <View android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_toLeftOf="@id/left_corner" />
                </RelativeLayout>
                <RelativeLayout android:layout_width="fill_parent" android:layout_height="15.0dip" android:layout_toRightOf="@id/member_img_txt_container" android:layout_alignParentBottom="true">
                    <ImageView android:id="@id/right_corner" android:background="@drawable/right_pic" android:layout_width="15.0dip" android:layout_height="15.0dip" android:scaleType="fitXY" android:layout_alignParentLeft="true" />
                    <View android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_toRightOf="@id/right_corner" />
                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>
        <ImageView android:gravity="center" android:id="@id/barcode_sizeimageview" android:paddingLeft="24.0dip" android:paddingRight="24.0dip" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginTop="16.0dip" android:layout_weight="36.0" android:contentDescription="@string/barcode" />
        <TextView android:textSize="16.0dip" android:textColor="#ff888888" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/barcode_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="-10.0dip" android:text="8888 ****** 点击查看" />
        <ImageView android:gravity="center" android:orientation="vertical" android:id="@id/qrcode_sizeimageview" android:paddingLeft="24.0dip" android:paddingTop="20.0dip" android:paddingRight="24.0dip" android:paddingBottom="20.0dip" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="64.0" android:contentDescription="@string/qrcode" />
        <LinearLayout android:orientation="vertical" android:id="@id/channel_switch_container" android:background="@drawable/current_channel_bg" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <View android:id="@id/channel_switch_split" android:background="#ffe5e5e5" android:layout_width="wrap_content" android:layout_height="1.0px" />
            <LinearLayout android:gravity="center" android:orientation="horizontal" android:background="@drawable/current_channel_bg" android:layout_width="fill_parent" android:layout_height="40.0dip">
                <ImageView android:layout_gravity="center_vertical" android:id="@id/channel_icon" android:layout_width="18.0dip" android:layout_height="18.0dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="6.0dip" />
                <TextView android:textSize="14.0dip" android:textColor="@android:color/black" android:ellipsize="end" android:layout_gravity="center_vertical" android:id="@id/selected_channel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLines="1" />
                <ImageView android:layout_gravity="center_vertical" android:layout_width="8.0dip" android:layout_height="14.0dip" android:layout_marginLeft="8.0dip" android:layout_marginRight="10.0dip" android:src="@drawable/right_arrow" android:scaleType="fitXY" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/shortcut_channel_container" android:background="@drawable/current_channel_bg" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <View android:id="@id/shortcut_channel_split" android:background="#ffe5e5e5" android:layout_width="wrap_content" android:layout_height="1.0px" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" />
            <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="40.0dip">
                <ImageView android:id="@id/shortcut_channel_icon" android:layout_width="18.0dip" android:layout_height="18.0dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="7.0dip" />
                <TextView android:textSize="14.0dip" android:textColor="#ff108ee9" android:ellipsize="end" android:id="@id/shortcut_channel_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="6.0dip" android:maxLines="1" />
                <TextView android:textSize="12.0dip" android:textColor="#ffff6600" android:ellipsize="end" android:id="@id/shortcut_channel_promo" android:background="@drawable/shortcut_channel_promo_bg" android:paddingLeft="3.0dip" android:paddingTop="1.0dip" android:paddingRight="3.0dip" android:paddingBottom="1.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="7.0dip" android:maxLines="1" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout android:id="@id/risk_tips_layout" android:background="@drawable/risk_tips_layout_bg" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="12.0dip" android:layout_marginTop="-20.0dip" android:layout_marginRight="12.0dip" android:layout_alignTop="@id/qr_bar_container" android:layout_alignBottom="@id/qr_bar_container">
        <TextView android:textSize="14.0dip" android:textColor="#ff108ee9" android:id="@id/request_money_btn" android:paddingLeft="10.0dip" android:paddingTop="5.0dip" android:paddingRight="10.0dip" android:paddingBottom="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/go_request_money" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
        <ImageView android:id="@id/risk_icon" android:layout_width="35.0dip" android:layout_height="35.0dip" android:layout_marginTop="60.0dip" android:src="@drawable/default_notice_icon" android:scaleType="centerCrop" android:layout_centerHorizontal="true" />
        <TextView android:textSize="16.0dip" android:textColor="@android:color/black" android:gravity="center|top" android:id="@id/risk_tips_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="40.0dip" android:text="@string/risk_hint_text" android:layout_below="@id/risk_icon" />
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="-10.0dip" android:layout_above="@id/view_detail_btn" android:layout_below="@id/risk_tips_text">
            <Button android:textSize="16.0dip" android:textColor="#ff108ee9" android:layout_gravity="center_horizontal" android:id="@id/risk_confirm_btn" android:background="@drawable/border_btn_bg" android:paddingLeft="30.0dip" android:paddingTop="5.0dip" android:paddingRight="30.0dip" android:paddingBottom="5.0dip" android:layout_width="wrap_content" android:layout_height="30.0dip" android:layout_marginTop="20.0dip" android:text="@string/i_know" />
            <TextView android:textSize="14.0dip" android:textColor="#ff108ee9" android:layout_gravity="center_horizontal" android:id="@id/dont_show_again" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/dont_show_again" />
        </LinearLayout>
        <TextView android:textSize="14.0dip" android:textColor="#ff108ee9" android:id="@id/view_detail_btn" android:paddingLeft="15.0dip" android:paddingTop="10.0dip" android:paddingRight="15.0dip" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hint_top_detail" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/osp_tabs" android:layout_width="fill_parent" android:layout_height="75.0dip" android:layout_alignParentBottom="true" />
</RelativeLayout>